Quite los e y e.preventDefault a ver si ya jala

--- a/Vue/Clase 3/peliculas.html
+++ b/Vue/Clase 3/peliculas.html
@@ -56,8 +56,7 @@
                 }
             },
             methods:{
-                getPeliculas(e){
-                    e.preventDefault();
+                getPeliculas(){
                     var config = {
                     method: 'get',
                     url: 'https://api.themoviedb.org/3/movie/popular?&language=es-MX',
