--- a/Vue/Clase 3/index.html
+++ b/Vue/Clase 3/index.html
@@ -12,27 +12,41 @@
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <!-- SweetAlert -->
     <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
-    <div id="contenedor">
-        <h1>Dashboard</h1>
+    <div id="contenedor" class="container m-3">
+        <h1 class="mb-5">Lil Jimmy Films</h1>
         <form>
-            <fieldset>
-                <legend>
+            <div class="mb-3">
+                <label class="form-label">Nombre de usuario</label>
+                <input type="text" class="form-control" v-model="username">
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Contraseña</label>
+                <input type="password" class="form-control" v-model="password">
+            </div>
+            <button @click="login" class="btn btn-primary">Acceder</button>
+                <!-- <legend>
                     Inicio de sesion
                 </legend>
                 <input type="text" placeholder="Nombre de usuario" v-model="username">
                 <br>
                 <input type="password" placeholder="Contraseña" v-model="password">
                 <br>
-                <button @click="login">ACCEDER</button>
-            </fieldset>
+                <button @click="login">ACCEDER</button> -->
         </form>
     </div>
 
     <script type="text/javascript">
+        window.onload = function(){
+            if(localStorage.getItem("user") != null){
+                window.location.href = "peliculas.html";
+            }
+        }
+
         const {createApp} = Vue;
         var miStorage = window.localStorage;
         const data = null;
@@ -48,8 +62,6 @@
             },
             methods:{
                 login(e){
-                    // var axios = require('axios');
-                    // var FormData = require('form-data');
                     e.preventDefault();
                     var data = new FormData();
                     data.append('username', this.username);
@@ -61,7 +73,6 @@
                     url: 'https://api.themoviedb.org/3/authentication/token/validate_with_login',
                     headers: { 
                         'Authorization': 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI4ZGVmNjQ4ZWQ5YTFhNDY5YjY5MzZlMDNhMjI5Yzg5NiIsInN1YiI6IjYzMWUzM2Q5MGQyZjUzMDA3YzZiZDc4OSIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.f6J0Wq5Np6EIroU5XVy7GzJlA1e8jyBXTFuAfr2hGf8', 
-                        // ...data.getHeaders()
                     },
                     data : data
                     };
@@ -82,6 +93,8 @@
                 }
             }
         }).mount("#contenedor")
+
+        
 
 
     </script>
