--- a/Vue/Clase 3/peliculas.html
+++ b/Vue/Clase 3/peliculas.html
@@ -16,14 +16,11 @@
     <!-- CSS only -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
 
-
-    <!-- <link rel="stylesheet" href="style.css"> -->
 </head>
 <body>
     <div id="contenedor">
 
         <button @click="volver()" type="button" class="btn btn-danger m-2">Cerrar sesión</button>
-
         <div class="container-xxl my-4">
             <h1>Popular en Peliculas</h1>
         </div>
@@ -37,7 +34,7 @@
                             <h6 class="card-title">
                                 {{peli.title}}
                             </h6>
-                            <button @click="goToMovieDetail(peli)" class="btn btn-primary col-12">{{peli.id}}</button>
+                            <button @click="goToMovieDetail(peli)" class="btn btn-primary col-12">Detalles</button>
                         </div>
                     </div>
                 </div>
@@ -52,7 +49,6 @@
                 window.location.href = "index.html";
             }
         }
-
         const {createApp} = Vue;
         var miStorage = window.localStorage;
         const data = null;
@@ -69,6 +65,7 @@
                     localStorage.removeItem("user");
                     window.location.href = "index.html";
                 },
+
                 getPeliculas(){
                     var config = {
                     method: 'get',
@@ -77,7 +74,6 @@
                         'Authorization': 'Bearer eyJhbGciOiJIUzI1NiJ9.eyJhdWQiOiI4ZGVmNjQ4ZWQ5YTFhNDY5YjY5MzZlMDNhMjI5Yzg5NiIsInN1YiI6IjYzMWUzM2Q5MGQyZjUzMDA3YzZiZDc4OSIsInNjb3BlcyI6WyJhcGlfcmVhZCJdLCJ2ZXJzaW9uIjoxfQ.f6J0Wq5Np6EIroU5XVy7GzJlA1e8jyBXTFuAfr2hGf8'
                     }
                     };
-
                     axios(config)
                     .then(function (response) {
                         console.log(response.data);
@@ -87,6 +83,7 @@
                         console.log(error);
                     });
                 },
+                
                 goToMovieDetail(movie){
                     localStorage.setItem("movieID", movie.id);
                     window.location.href = "pelicula-detalles.html";
